src/objects/Home_Delivery_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings supporting Home Delivery Vouchers object related functionality.</description>
    <fields>
        <fullName>Offer_Description__c</fullName>
        <description>Defines Offer Description that should be auto assigned based on the record type.</description>
        <inlineHelpText>Defines Offer Description that should be auto assigned based on the record type.</inlineHelpText>
        <label>Offer Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Name__c</fullName>
        <description>Defines Offer Name that should be auto assigned based on the record type.</description>
        <inlineHelpText>Defines Offer Name that should be auto assigned based on the record type.</inlineHelpText>
        <label>Offer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supported_Product_Ids__c</fullName>
        <description>Defines list of product Ids that are supported for the delivery. Semicolon separated. Basic lookup is based on delivery days which is ambiguous factor. Extra limitation is required.</description>
        <inlineHelpText>Defines list of product Ids that are supported for the delivery. Semicolon separated. Basic lookup is based on delivery days which is ambiguous factor. Extra limitation is required.</inlineHelpText>
        <label>Supported Product Ids</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Home Delivery Settings</label>
</CustomObject>